@@ -17,17 +17,20 @@ PREFIX	= NONE
 EXEC_PREFIX = NONE
 LISPDIR = NONE
 PACKAGEDIR = NONE
+VERSION_SPECIFIC_LISPDIR = NONE
 
 GOMI	= *.elc
 
 
 elc:
 	$(EMACS) $(FLAGS) -f compile-semi \
-		$(PREFIX) $(EXEC_PREFIX) $(LISPDIR)
+		$(PREFIX) $(EXEC_PREFIX) $(LISPDIR) \
+		$(VERSION_SPECIFIC_LISPDIR)
 
 install-elc:	elc
 	$(EMACS) $(FLAGS) -f install-semi \
-		$(PREFIX) $(EXEC_PREFIX) $(LISPDIR)
+		$(PREFIX) $(EXEC_PREFIX) $(LISPDIR) \
+		$(VERSION_SPECIFIC_LISPDIR)
 
 install:	install-elc
 
